Add About activity and 'about app' view

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -24,5 +24,6 @@
         <item>Ταυτότητα ή διαβατήριο</item>
         <item>Ταχυδρομικός κώδικας</item>
     </string-array>
+    <string name="about">Πληροφορίες</string>
 
 </resources>
