--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -2,14 +2,14 @@
 <resources>
     <string name="app_name">Curf n Surf</string>
 
-    <string name="purpose_1">Μετάβαση σε φαρμακείο ή για αιμοδοσία ή επίσκεψη σε γιατρό</string>
-    <string name="purpose_2">Μετάβαση σε κατάστημα για αγορά ή προμήθεια αγαθών/υπηρεσιών πρώτης ανάγκης</string>
+    <string name="purpose_1">Μετάβαση σε φαρμακείο ή για αιμοδοσία ή επίσκεψη σε γιατρό ή για διενέργεια εργαστηριακής εξέτασης για Covid-19 ή για εμβολιασμό στα κέντρα εμβολιασμού</string>
+    <string name="purpose_2">Μετάβαση σε κατάστημα για αγορά ή προμήθεια αγαθών/υπηρεσιών πρώτης ανάγκης, περιλαμβανομένου και του take away</string>
     <string name="purpose_3">Μετάβαση σε τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή</string>
     <string name="purpose_4">Απόλυτα αναγκαίες επισκέψεις σε κρατικές υπηρεσίες ή υπηρεσίες του ευρύτερου δημόσιου τομέα και της τοπικής αυτοδιοίκησης</string>
     <string name="purpose_5">Διακίνηση για παροχή βοήθειας σε άτομα που αδυνατούν να αυτοεξυπηρετηθούν ή που οφείλουν να αυτοπροστατευθούν ή βρίσκονται σε αυτοπεριορισμό ή/και σε χώρους υποχρεωτικού περιορισμού (καραντίνα)</string>
-    <string name="purpose_6">Μετακίνηση για σωματική άσκηση ή για τις ανάγκες κατοικίδιου ζώου, εφόσον δεν υπερβαίνουν τα δύο άτομα και περιορίζονται σε γειτνιάζουσες με την κατοικία τους περιοχές</string>
-    <string name="purpose_7">Μετάβαση σε τελετή (π.χ. κηδεία, γάμος, βάφτιση) από συγγενείς πρώτου και δεύτερου βαθμού που δεν υπερβαίνουν τον αριθμό των 10 προσώπων</string>
-    <string name="purpose_8">Δήλωση οποιουδήποτε άλλου σκοπού μετακίνησης που μπορεί να δικαιολογηθεί με βάση τα μέτρα απαγόρευσης της κυκλοφορίας.</string>
+    <string name="purpose_6">Μετακίνηση για φυσική άσκηση ή ατομική άθληση, εφόσον περιορίζεται σε χώρους όπου επιτρέπεται η πρόσβαση</string>
+    <string name="purpose_7">Μετάβαση σε τελετή (π.χ. κηδεία, γάμος, βάφτιση) από συγγενείς πρώτου και δεύτερου βαθμού που δεν υπερβαίνουν τον αριθμό των 10 προσώπων ή για ατομική προσευχή</string>
+    <string name="purpose_8">Δήλωση οποιουδήποτε άλλου σκοπού μετακίνησης που μπορεί να δικαιολογηθεί με βάση τα μέτρα απαγόρευσης της κυκλοφορίας (με την προσκόμιση του απαραίτητου αποδεικτικού στοιχείου που ισχύει για κάθε περίπτωση)</string>
 
     <string name="ask_purpose">Ποιός είναι ο σκοπός μετακίνησης σου;</string>
     <string name="id_number_hint">Αριθμός</string>
