--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">Curf n Surf</string>
 
-    <string name="purpose_1">Visit to a pharmacy, blood donation center or a doctor</string>
-    <string name="purpose_2">Visit to a store to buy essential goods / services</string>
-    <string name="purpose_3">Visit to a bank, provided that electronic transactions are not possible</string>
-    <string name="purpose_4">Absolutely necessary visits to government services or services of the wider public sector and local government</string>
-    <string name="purpose_5">Movement with the purpose of assisting people who are unable to serve or protect themselves or who are in self-confinement and / or compulsory confinement (quarantine)</string>
-    <string name="purpose_6">Movement for physical activity or for the needs of a pet, alone or in a group of no more than 2 persons and in areas adjacent to their homes</string>
-    <string name="purpose_7">Movement with the purpose of attending a ceremony (e.g. funeral, wedding, christening) of first and second degree relatives not exceeding 10 persons</string>
-    <string name="purpose_8">Movement for any other purpose which may be justified under the prohibition of movement measures</string>
+    <string name="purpose_1">Going to a pharmacy, visiting a physician or for blood donation or laboratory testing for Covid-19 or for vaccination at the vaccination centres</string>
+    <string name="purpose_2">Going to a shop for essential goods/services, including take away</string>
+    <string name="purpose_3">Going to the bank for transactions not available online</string>
+    <string name="purpose_4">Strictly necessary visits to public services or services of the wider public sector and local authorities</string>
+    <string name="purpose_5">Helping people who cannot take care of themselves or people who must protect themselves or who are in self-isolation and/or in places of compulsory isolation (quarantine)</string>
+    <string name="purpose_6">Physical activity or individual sports practiced in areas were access is permitted</string>
+    <string name="purpose_7">Going to a ceremony (e.g. funeral, wedding, christening) of first and second degree relatives not exceeding 10 people or for individual prayer</string>
+    <string name="purpose_8">Any other reason that may be justified under the lockdown measures (by presenting the necessary proof for each case)</string>
 
     <string name="ask_purpose">What\s your purpose for leaving home?</string>
     <string name="id_number_hint">ID or Passport</string>
