Minor string correction

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Curf n Surf</string>
 
     <string name="purpose_1">Μετάβαση σε φαρμακείο ή για αιμοδοσία ή επίσκεψη σε γιατρό ή για διενέργεια εργαστηριακής εξέτασης για Covid-19 ή για εμβολιασμό στα κέντρα εμβολιασμού</string>
-    <string name="purpose_2">Μετάβαση σε κατάστημα για αγορά ή προμήθεια αγαθών/υπηρεσιών πρώτης ανάγκης, περιλαμβανομένου και του take away</string>
+    <string name="purpose_2">Μετάβαση σε κατάστημα για αγορά ή προμήθεια αγαθών/υπηρεσιών, περιλαμβανομένου και του take away</string>
     <string name="purpose_3">Μετάβαση σε τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή</string>
     <string name="purpose_4">Αναγκαίες επισκέψεις σε κρατικές υπηρεσίες ή υπηρεσίες του ευρύτερου δημόσιου τομέα και της τοπικής αυτοδιοίκησης</string>
     <string name="purpose_5">Διακίνηση για παροχή βοήθειας σε άτομα που αδυνατούν να αυτοεξυπηρετηθούν ή που οφείλουν να αυτοπροστατευθούν ή βρίσκονται σε αυτοπεριορισμό ή/και σε χώρους υποχρεωτικού περιορισμού (καραντίνα) ή για επίσκεψη σε οικία</string>
