--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -20,6 +20,8 @@
     <string name="cant_be_empty">Δεν πρέπει να είναι κενό</string>
     <string name="numbers_only">Αριθμοί μόνο</string>
     <string name="form_null_msg">Συμπληρώστε όλα τα πεδία</string>
+    <string name="version_placeholder">Έκδοση %1$s</string>
+
 
     <string-array name="screen_titles">
         <item>Σκοπός</item>
