Update purpose strings

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -3,13 +3,13 @@
     <string name="app_name">Curf n Surf</string>
 
     <string name="purpose_1">Μετάβαση σε φαρμακείο ή για αιμοδοσία ή επίσκεψη σε γιατρό ή για διενέργεια εργαστηριακής εξέτασης για Covid-19 ή για εμβολιασμό στα κέντρα εμβολιασμού</string>
-    <string name="purpose_2">Μετάβαση σε κατάστημα για αγορά ή προμήθεια αγαθών/υπηρεσιών, περιλαμβανομένου και του take away</string>
+    <string name="purpose_2">Μετάβαση σε επιχείρηση λιανικού εμπορίου ή επιχείρηση εστίασης</string>
     <string name="purpose_3">Μετάβαση σε τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή</string>
     <string name="purpose_4">Αναγκαίες επισκέψεις σε κρατικές υπηρεσίες ή υπηρεσίες του ευρύτερου δημόσιου τομέα και της τοπικής αυτοδιοίκησης</string>
-    <string name="purpose_5">Διακίνηση για παροχή βοήθειας σε άτομα που αδυνατούν να αυτοεξυπηρετηθούν ή που οφείλουν να αυτοπροστατευθούν ή βρίσκονται σε αυτοπεριορισμό ή/και σε χώρους υποχρεωτικού περιορισμού (καραντίνα) ή για επίσκεψη σε οικία</string>
-    <string name="purpose_6">Μετακίνηση για φυσική άσκηση ή ατομική άθληση, εφόσον περιορίζεται σε χώρους όπου επιτρέπεται η πρόσβαση</string>
+    <string name="purpose_5">Διακίνηση για παροχή βοήθειας σε πρόσωπα που αδυνατούν να αυτοεξυπηρετηθούν ή που οφείλουν να αυτοπροστατευθούν ή βρίσκονται σε αυτοπεριορισμό ή/και σε χώρους υποχρεωτικού περιορισμού ή για επίσκεψη σε οικία ή οίκο ευγηρίας ή δομή φροντίδας/φιλοξενίας ευπαθών ή ευάλωτων ομάδων</string>
+    <string name="purpose_6">Μετακίνηση για φυσική άσκηση ή για πρόσβαση σε δημόσιους χώρους συνάθροισης στους οποίους επιτρέπεται η πρόσβαση</string>
     <string name="purpose_7">Μετάβαση για εκκλησιασμό/άλλες μορφές θρησκευτικής λατρείας ή για ατομική προσευχή ή μετάβαση σε τελετές όπως κηδείες, γάμους και βαφτίσεις</string>
-    <string name="purpose_8">Δήλωση οποιουδήποτε άλλου σκοπού μετακίνησης που μπορεί να δικαιολογηθεί με βάση τα μέτρα απαγόρευσης της κυκλοφορίας (με την προσκόμιση του απαραίτητου αποδεικτικού στοιχείου που ισχύει για κάθε περίπτωση)</string>
+    <string name="purpose_8">Δήλωση οποιουδήποτε άλλου σκοπού μετακίνησης που μπορεί να δικαιολογηθεί με βάση τα μέτρα απαγόρευσης της κυκλοφορίας</string>
     <string name="purpose_9">Μετάβαση σε επιχείρηση/οργανισμό που δεν τελεί υπό αναστολή εργασιών, δυνάμει των περί Λοιμοκαθάρσεως Διαταγμάτων</string>
 
     <string name="ask_purpose">Ποιός είναι ο σκοπός μετακίνησης σου;</string>
